client/src/styles/base.scss
$primaryColor: #7da888;
$primaryColor: #d18636;
$primaryColor: #56c3d6;
$secondaryColor: #709178;
$secondaryColor: #b36e39;
$secondaryColor: #4ca1b0;

$font-stack: 'Fredoka One', cursive;

$headerHeight: 70px;

.navbar {
	top: 0;
	width:100%;
	height: $headerHeight;
	margin: 0 !important;
	position: fixed !important;
	background-color: $primaryColor;
	z-index: 1040;

	h1, h2, h3, h4, h5, h6 {
		overflow: hidden;
		text-overflow: ellipsis;
	}
}
.sidebar {
	top: 0;
	height: 100vh;
	padding: $headerHeight 0 0 !important;
	position: fixed !important;
	background-color: $secondaryColor;
	z-index: 1050;
}
.sidebarContent {
	width: 100%;
	height: 100%;
	position: relative;
	overflow: auto;
}
.logo {
	font-family: $font-stack;
	color:#FFFFFF;
}
.content {
	margin-top: $headerHeight;
}
.contentPage {
	padding: 1rem 2rem !important;
}
.panel {
	width: 20rem;
	max-width: 20rem;
	margin: 0 1rem 1rem 0;
	position: relative;
	display: inline-block;
	background-color: $primaryColor;

	a {
		color: #FFFFFF;

		.panelText {
			min-height: 7rem;
			padding: 0.5rem;

			h1, h2, h3, h4, h5, h6 {
				margin: 0 0.5rem;
			}
		}
		.panelBottom {
			width: 100%;
			padding: 0.5rem 1rem;
			background-color: $secondaryColor;
		}
	}
}
.panel:hover {
	//background-color: $secondaryColor;

	a {
		text-decoration: none;
		color: #EEEEEE;

		.panelBottom {
			box-shadow: 0 -5px 10px 0 rgba(71,71,71,0.15);
		}
	}
}
.link {
	padding: 1rem 0.5rem 0.5rem;

	a {
		color: #FFFFFF !important;
	}
}
.link + .link {
	border-top: 1px solid #FFFFFF;
}

